v3.1.0/_sources/plugins/platform_nodes_configuration_summary_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.platform_nodes_configuration_summary_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.platform_nodes_configuration_summary_info -- Information module for Platform Nodes Configuration Summary
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.1.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.platform_nodes_configuration_summary_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Platform Nodes Configuration Summary.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options


.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Platform Nodes Configuration Summary reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Platform Nodes Configuration Summary object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Platform Nodes Configuration Summary
      cisco.dnac.platform_nodes_configuration_summary_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;version&quot;: &quot;string&quot;,
      &quot;response&quot;: {
        &quot;nodes&quot;: [
          {
            &quot;ntp&quot;: {
              &quot;servers&quot;: [
                &quot;string&quot;
              ]
            },
            &quot;network&quot;: [
              {
                &quot;intra_cluster_link&quot;: true,
                &quot;lacp_mode&quot;: true,
                &quot;inet&quot;: {
                  &quot;routes&quot;: [],
                  &quot;gateway&quot;: &quot;string&quot;,
                  &quot;dns_servers&quot;: [],
                  &quot;netmask&quot;: &quot;string&quot;,
                  &quot;host_ip&quot;: &quot;string&quot;
                },
                &quot;interface&quot;: &quot;string&quot;,
                &quot;inet6&quot;: {
                  &quot;host_ip&quot;: &quot;string&quot;,
                  &quot;netmask&quot;: &quot;string&quot;
                },
                &quot;lacp_supported&quot;: true,
                &quot;slave&quot;: [
                  &quot;string&quot;
                ]
              }
            ],
            &quot;proxy&quot;: {
              &quot;https_proxy&quot;: &quot;string&quot;,
              &quot;no_proxy&quot;: [
                &quot;string&quot;
              ],
              &quot;https_proxy_username&quot;: &quot;string&quot;,
              &quot;http_proxy&quot;: &quot;string&quot;,
              &quot;https_proxy_password&quot;: &quot;string&quot;
            },
            &quot;platform&quot;: {
              &quot;vendor&quot;: &quot;string&quot;,
              &quot;product&quot;: &quot;string&quot;,
              &quot;serial&quot;: &quot;string&quot;
            },
            &quot;id&quot;: &quot;string&quot;,
            &quot;name&quot;: &quot;string&quot;
          }
        ]
      }
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

